--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,24 +1,17 @@
 .navBarSide {
-    // position: fixed;
-    // top: 64px; // גובה הכותרת
-    // right: 0;
     width: 80px;
     // height: calc(100vh - 64px);
     height: 100vh;
-    background: #fff;
+    background: rgb(80 187 130);
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 2rem;
     gap: 2rem;
     box-shadow: -2px 0 8px rgba(0, 0, 0, 0.04);
-    // z-index: 90;
 }
 
 .navBarMobile {
-    // position: fixed;
-    // bottom: 0;
-    // left: 0;
     width: 100vw;
     height: 100px;
     background: #fff;
@@ -26,19 +19,21 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    background: rgb(80 187 130);
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.04);
-    // z-index: 90;
 }
 
 .navItem {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     width: 80px;
 }
 
 .circle {
-    width: 100%;
+    border: 2px solid white;
+    width: 90%;
     aspect-ratio: 1 / 1;
     // height: 64px;
     background: rgb(80 187 130);
@@ -48,31 +43,41 @@
     align-items: center;
     justify-content: center;
     font-size: 2rem;
+    transition: background 0.2s;
+    &.hovered {
+        background: #fff;
+    }
 }
 
 .label {
-    font-size: 0.85rem;
-    color: #333;
-    text-align: center;
-    white-space: pre-line;
+    color: white;
+    font-size: 100%;
+    font-weight: 700;
+    width: 70px;
+    text-wrap: wrap;
+    display: block;
+    line-height: 1.3;
+}
+
+.circleImg {
+    width: 60%;
+    height: 60%;
+    object-fit: contain;
+    display: block;
 }
 
 @media (max-width: 600px) {
     .navBarSide {
         display: none;
     }
-    // .navBarMobile {
-    //     display: flex;
-    //     gap: 0;
-    //     padding: 0;
-    //     height: 100px;
-    // }
     .navItem {
+        padding-top: 5px;
         flex: 1 1 0;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: start;
+        text-align: center;
         height: 100%;
         min-width: 56px; // לא פחות מזה
         max-width: 80px;
@@ -92,10 +97,7 @@
     }
     .navItem .label {
         text-align: center;
-        white-space: nowrap;
-        display: flex;
         font-size: 0.8rem;
-        // min-font-size: 0.7rem;
     }
 }
 
