--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 64px;
-    background: #f5f6fa;
+    background: #ffffff;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -10,7 +10,8 @@
     // position: fixed;
     // top: 0;
     // left: 0;
-    // z-index: 100;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.18), 0 1.5px 6px rgba(0, 0, 0, 0.08);
+    z-index: 100;
     // box-sizing: border-box;
 }
 
