--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -6,14 +6,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 2rem;
-    gap: 2rem;
+    padding-top: 1rem;
+    gap: 1rem;
     box-shadow: -2px 0 8px rgba(0, 0, 0, 0.04);
 }
 
 .navBarMobile {
     width: 100vw;
-    height: 100px;
+    // height: 100px;
+    flex: 0 0 100px;
     background: #fff;
     display: flex;
     flex-direction: row;
@@ -46,6 +47,28 @@
     transition: background 0.2s;
     &.hovered {
         background: #fff;
+    }
+}
+
+.management-circle {
+    border: 2px solid white;
+    width: 90%;
+    aspect-ratio: 1 / 1;
+    // height: 64px;
+    background: #fff;
+    // background: rgb(80 187 130);
+    border-radius: 50%;
+    margin-bottom: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    transition: background 0.2s;
+    color: rgb(80, 187, 130); // icon color green by default
+
+    &.hovered {
+        background: rgb(80, 187, 130); // green on hover
+        color: #fff; // icon color white on hover
     }
 }
 
@@ -82,13 +105,13 @@
         min-width: 56px; // לא פחות מזה
         max-width: 80px;
     }
-    .circle {
+    .circle,
+    .management-circle {
         width: 48px;
         max-width: 80%;
         min-width: 32px;
         aspect-ratio: 1 / 1;
         margin: 0 auto 0.5rem auto;
-        background: rgb(80 187 130);
         border-radius: 50%;
         display: flex;
         align-items: center;
@@ -105,4 +128,16 @@
     .navBarMobile {
         display: none;
     }
+}
+
+.circle.active,
+.management-circle.active {
+    border: 2px solid #fff;
+    background: #fff !important;
+    // box-shadow: 0 0 0 2px rgb(80, 187, 130);
+}
+.label.active {
+    color: #fff;
+    font-weight: bold;
+    // text-shadow: 0 1px 2px rgb(80, 187, 130);
 }
