--- a/client/src/pages/Main/Main.scss
+++ b/client/src/pages/Main/Main.scss
@@ -9,22 +9,21 @@
     flex: 1 1 auto;
     display: flex;
     flex-direction: row;
+    height: 100%;
+    min-height: 0;
 }
 
 .main-content {
     flex: 1 1 auto;
     overflow: auto;
-    background-color: #5e48b5; /* Example background color */
-    // padding: ...;
+    background-color: #ededed; /* Example background color */
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 @media (max-width: 600px) {
     .main-wrapper {
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
-    //   .navBarMobile {
-    //     width: 100%;
-    //     height: 80px;
-    //     flex-shrink: 0;
-    //   }
 }
